fix team org link and read more position on mobile

--- a/2020/css/italkidesign2020.webflow.css
+++ b/2020/css/italkidesign2020.webflow.css
@@ -1026,6 +1026,11 @@
     height: 480px;
   }
 
+  .aes {
+    font-size: 48px;
+    line-height: 56px;
+  }
+
   .fixed-block {
     top: 30vh;
     -webkit-box-orient: vertical;
@@ -1122,9 +1127,22 @@
   }
 
   .side-note {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     max-width: 100vw;
     padding-right: 0px;
     padding-left: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 
   .heading {
@@ -1140,6 +1158,10 @@
   .ds-wrapper {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+
+  .link {
+    text-align: center;
   }
 
   .grid-left-img {
@@ -1287,6 +1309,19 @@
 
   .gallery5 {
     height: 150px;
+  }
+
+  .aes {
+    padding-right: 8px;
+    padding-left: 8px;
+  }
+
+  .div-block-3 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
